--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,21 +1,62 @@
-body{
-    align-content: center;
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #79abd2;
+    margin-left: 50%;
+    margin-right: auto;
+    margin-top: 10%;
+    margin-bottom: 0%;
+    /* width: fit-content; */
+    /* height: fit-content; */
+    position: absolute;
+}
+
+/* Items on page */
+.container{
+      
+}
+
+#firstSet{
+    z-index: 1;
+    position: absolute;
+    margin-top: 15%;
+    margin-bottom: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    height: fit-content;
 
 }
 
-.class{
-    align-content: center;
-
+#secondSet{
+z-index: 0;
+position: absolute;
+margin-top: 15%;
+margin-bottom: 15%;
+margin-left: auto;
+margin-right: auto;
+width: fit-content;
+height: fit-content;
 }
+
+#thirdSet{
+z-index: -1;
+position: absolute;
+margin-top: 15%;
+margin-bottom: 15%;
+margin-left: auto;
+margin-right: auto;
+width: fit-content;
+height: fit-content;
+}
+
+
+/* ________________ */
 
 
 /* Button css */
-#ballMenuContainer {
-    position: absolute;
-    right: 25px;
-    top:0;
-}
-
 
 @-webkit-keyframes pulse {
     0% {
@@ -135,8 +176,10 @@ body{
     -webkit-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
-    border: 2px dashed #fff;
+    border: 2px #fff;
     margin: 10px;
+    margin-top: 10%;
+    margin-bottom: 10%;
     text-decoration: none;
 }
 
@@ -148,7 +191,10 @@ body{
 }
 
 .redball {
-    background-color: #d90e23;
+    background-color: azure;
+    height: 200px;
+    width: 200px;
+   /*  background-color: #d90e23;
     -moz-box-shadow: 0 0 0 3px #d90e23, 2px 1px 4px 4px rgba(10,10,0,.5);
     -webkit-box-shadow: 0 0 0 3px #d90e23, 2px 1px 4px 4px rgba(10,10,0,.5);
     -o-box-shadow: 0 0 0 3px #d90e23, 2px 1px 4px 4px rgba(10,10,0,.5);
@@ -157,11 +203,15 @@ body{
     background-image: -moz-linear-gradient(0deg, rgba(0,0,0,.25) 50%, transparent 10%),-moz-linear-gradient(rgba(0,0,0,.25) 50%, transparent 50%);
     background-image: -webkit-linear-gradient(0deg, rgba(0,0,0,.25) 50%, transparent 10%),-webkit-linear-gradient(rgba(0,0,0,.25) 50%, transparent 50%);
     background-image: -o-linear-gradient(0deg, rgba(0,0,0,.25) 50%, transparent 10%),-o-linear-gradient(rgba(0,0,0,.25) 50%, transparent 50%);
-    background-size:10px 10px;
+    background-size:10px 10px; */
 }
 
 .blueball {
-    -moz-box-shadow: 0 0 0 3px #d6385b, 2px 1px 4px 4px rgba(10,10,0,.5);
+    background-color: azure;
+    height: 200px;
+    width: 200px;
+
+    /* -moz-box-shadow: 0 0 0 3px #d6385b, 2px 1px 4px 4px rgba(10,10,0,.5);
     -webkit-box-shadow: 0 0 0 3px #d6385b, 2px 1px 4px 4px rgba(10,10,0,.5);
     -o-box-shadow: 0 0 0 3px #d6385b, 2px 1px 4px 4px rgba(10,10,0,.5);
     box-shadow: 0 0 0 3px #d6385b, 2px 1px 6px 4px rgba(10,10,0,.5);
@@ -171,44 +221,13 @@ body{
     background-image: -moz-linear-gradient(35deg, #9f2e86 25%, transparent 25%, transparent 75%, #9f2e86 75%, #9f2e86), 
     -moz-linear-gradient(-35deg, #9f2e86 25%, transparent 25%, transparent 75%, #9f2e86 75%, #9f2e86);
     background-size:20px 20px;  
-    background-color: #d6385b;
-}
-
-.yellowball {
-    background-color: #7968a8;
-    -moz-box-shadow: 0 0 0 3px #7968a8, 2px 1px 4px 4px rgba(10,10,0,.5);
-    -webkit-box-shadow: 0 0 0 3px #7968a8, 2px 1px 4px 4px rgba(10,10,0,.5);
-    box-shadow: 0 0 0 3px #7968a8, 2px 1px 6px 4px rgba(10,10,0,.5);
-  
-    background-image: -webkit-linear-gradient(90deg, transparent 50%, rgba(99,138,190,1) 50%);
-    background-image: -moz-linear-gradient(90deg, transparent 50%, rgba(99,138,190,1) 50%);
-    background-size: 8px 8px;
-}
-
-.greenball {
-    -moz-box-shadow: 0 0 0 3px #65b37a, 2px 1px 4px 4px rgba(10,10,0,.5);
-    -webkit-box-shadow: 0 0 0 3px #65b37a, 2px 1px 4px 4px rgba(10,10,0,.5);
-    box-shadow: 0 0 0 3px #65b37a, 2px 1px 6px 4px rgba(10,10,0,.5);
-
-    background:
-        -webkit-radial-gradient(#e8b15e 4px, transparent 6px);
-    background:
-        -moz-radial-gradient(#e8b15e 4px, transparent 6px);
-    background-size: 20px 20px;
-  
-    background-image: -webkit-radial-gradient(#e8b15e 15%, transparent 16%),
-        -webkit-radial-gradient(#e8b15e 15%, transparent 16%);
-    background-image: -moz-radial-gradient(#e8b15e 15%, transparent 16%),
-        -moz-radial-gradient(#e8b15e 15%, transparent 16%);
-    background-color: #65b37a;
-    background-size:30px 30px;
-    background-position: 0 0, 20px 20px;
+    background-color: #d6385b; */
 }
 
 .menuText {
     font-family: 'IdolwildRegular' , Verdana, Helvetica, Sans-Serif;
     font-size: larger;
-    color: #ffffff;
+    color: black;
     position: relative;
     vertical-align: middle;
     text-align: center;
@@ -221,24 +240,12 @@ body{
 #menuBall2 {
   -webkit-animation: bump 6s linear .5s infinite normal;
 }
-#menuBall3 {
-  -webkit-animation: bump 6s linear 1s infinite normal;
-}
-#menuBall4 {
-  -webkit-animation: bump 6s linear 1.5s infinite normal;
-}
 
 #menuBall1 {
   -moz-animation: bump 6s linear 0s infinite normal;
 }
 #menuBall2 {
   -moz-animation: bump 6s linear .5s infinite normal;
-}
-#menuBall3 {
-  -moz-animation: bump 6s linear 1s infinite normal;
-}
-#menuBall4 {
-  -moz-animation: bump 6s linear 1.5s infinite normal;
 }
 
 #menuBall1 {
@@ -247,12 +254,6 @@ body{
 #menuBall2 {
   -o-animation: bump 6s linear .5s infinite normal;
 }
-#menuBall3 {
-  -o-animation: bump 6s linear 1s infinite normal;
-}
-#menuBall4 {
-  -o-animation: bump 6s linear 1.5s infinite normal;
-}
 
 #menuBall1 {
   animation: bump 6s linear 0s infinite normal;
@@ -260,14 +261,7 @@ body{
 #menuBall2 {
   animation: bump 6s linear .5s infinite normal;
 }
-#menuBall3 {
-  animation: bump 6s linear 1s infinite normal;
-}
-#menuBall4 {
-  animation: bump 6s linear 1.5s infinite normal;
-}
-
-
+/* 
 div#partyInfo {
     position: absolute;
     bottom: 30%;
@@ -307,10 +301,7 @@ div#partyInfo {
 
 #darkMe.showMe, #partyInfo.showMe{
     visibility:visible;
-}
+} */
 
 /* form css */
 
-#forms{
-    display: none;
-}
