--- a/public/assets/homeStyle.css
+++ b/public/assets/homeStyle.css
@@ -12,7 +12,7 @@ body {
     width: 1000px;
     height: 750px;
     border-color: #333;
-    
+    background-color: aliceblue;
     border-width: 2px;
     align-content: center;
     margin: 0;
